# Chatbot

./: README.md  pyproject.toml  requirements.txt
chatbotAI.egg-info/: PKG-INFO
chatbot_venv/: pyvenv.cfg
chatbot_venv/Scripts/: activate  activate.bat
src/: requirement.txt
src/chatbotAI.egg-info/: PKG-INFO  SOURCES.txt
